connect weather API update styles

--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,71 @@
+* {
+  box-sizing: border-box;
+  margin: 0 auto;
+}
+
 body {
   text-align: center;
-  background-color: plum;
+  font-family: "Merriweather Sans", sans-serif;
+  color: black;
 }
 
 h1 {
   font-size: 4rem;
-  font-weight: bolder;
-  color: white;
+  font-weight: 800;
   margin-top: 4rem;
+  width: 80vw;
 }
 
 h3 {
   font-size: 2rem;
-  font-weight: bold;
-  color: white;
+  font-weight: 700;
 }
 
-.weatherInput {
+#prompt {
+  margin: 30px auto 0;
+  width: 500px;
+  font-family: "Open Sans", sans-serif;
+}
+
+.weatherForm {
   padding: 20px;
+  margin: 30px;
+  font-family: "Open Sans", sans-serif;
 }
 
 label {
   margin: 10px;
+  font-size: 1rem;
+  font-weight: 400;
 }
 
-.submitbtn {
-  margin-top: 10px;
+input {
+  border: solid 1px;
+  border-radius: 30px;
+  padding: 10px 30px;
+  width: 300px;
+  font-size: 1rem;
 }
 
 .btn {
-  padding: 20px;
-  background-color: white;
-  color: plum;
-  font-size: 1.5rem;
+  padding: 10px;
+  background-color: lightblue;
   margin: 10px;
+  border: solid 1px;
+  border-radius: 30px;
+  font-size: 1rem;
+  padding: 10px 30px;
 }
 
 .weather {
   visibility: hidden;
   padding: 30px;
+  font-family: "Open Sans", sans-serif;
 }
 
 .activity {
   visibility: hidden;
+  font-size: 2rem;
+  font-weight: 700;
+  width: 700px;
 }
